difficulty meter added (html css javascript)

--- a/index.html
+++ b/index.html
@@ -38,40 +38,28 @@
     </nav>
     <section class="o-container">
         <div class="o-grid js-cocktailList">
-            <div class="c-cocktail__item"> <!-- voor de ctrl z -->
+            <div class="c-cocktail__item">
                 <div class="cocktail__item-inner">
                     <div class="c-cocktail__item-front">
                         <div>
-                            <img class="c-cocktail__image" src="https://www.thecocktaildb.com/images/media/drink/ruxuvp1472669600.jpg" alt="" height="100%">
+                            <img class="c-cocktail__image" src="https://www.thecocktaildb.com/images/media/drink/qyyvtu1468878544.jpg" alt="" height="100%">
                         </div>
                         <div class="c-cocktail__name">
-                            Vodka Redbull
+                            Vodka
+                        </div>
+                        <div class="c-chart" style="--percentage: 30">3 <br> Ingredients</div>
+                        <div class="c-chart__label">
+                            <div>Easy</div>
+                            <div>Hard</div>
                         </div>
                     </div>
-                    <div class="cocktail__item-back">
-                        
+                    <div class="c-cocktail__item-back">
                         <h5>Cocktail Glass</h5>
-                        Glass
+                        Test
                         <h5>Ingrendient</h5>
-                        1
+                        Test
                         <h5>Instructions</h5>
-                        instr
-
-                    </div>
-                </div>
-            </div>
-            <div class="c-cocktail__item"> <!-- voor de ctrl z -->
-                <div class="cocktail__item-inner">
-                    <div class="c-cocktail__item-front">
-                        <div>
-                            <img class="c-cocktail__image" src="https://www.thecocktaildb.com/images/media/drink/ruxuvp1472669600.jpg" alt="" height="100%">
-                        </div>
-                        <div class="c-cocktail__name">
-                            Vodka Redbull
-                        </div>
-                    </div>
-                    <div class="cocktail__item-back">
-                        test
+                        Test
                     </div>
                 </div>
             </div>
