--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
 
+    <!-- Favicon -->
+    <link rel="icon" href="icon.svg">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
+
     <script src="script/app.js"></script>
     <script src="script/dataHandler.js"></script>
 
@@ -15,30 +20,24 @@
 <body>
 
     <header class="c-header">
-        <!-- <div class="c-header__search"> -->
             <div class="c-header__search">
+                <img class="c-header__logo" src="logo.png" />
                 <input class="c-search__input js-search" type="text" placeholder="Search...">
                 <div class="c-search__btn"></div>
-              </div>
-            <!-- <input class="c-input js-search" placeholder="Search by cocktail name" type="text" name="" id="">
-            <button class="c-search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                </svg>
-            </button>
-        </div> -->
+            </div>
     </header>
     <nav class="c-nav">
-        <div class="c-navList">
-            <div class="c-navItem js-nav__item c-nav__item-selected" data-filterG="1">Cocktail Name</div>
-            <div class="c-navItem js-nav__item" data-filterG="2">Ingrendient Name</div>
-            <div class="c-navItem js-nav__random" data-filterG="3">Random Cocktail</div>
+        <div class="c-nav__box">
+            <ul class="c-nav__list">
+                <li class="c-nav__list-item js-nav__item c-nav__list-item--active" data-filterG="1">Cocktail Name</li>
+                <li class="c-nav__list-item js-nav__item" data-filterG="2">Ingredient Name</li>
+                <li class="c-nav__list-item js-nav__random" data-filterG="3">Random Cocktail</li>
+            </ul>
         </div>
     </nav>
     <section class="o-container">
         <div class="o-grid js-cocktailList">
-            <div class="c-cocktail__item">
+            <div class="c-cocktail__item" tabindex="0">
                 <div class="cocktail__item-inner">
                     <div class="c-cocktail__item-front">
                         <div>
