--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <nav class="c-nav">
         <div class="c-nav__box">
             <ul class="c-nav__list">
-                <li class="c-nav__list-item js-nav__item c-nav__list-item--active" data-filterG="1">Cocktail Name</li>
-                <li class="c-nav__list-item js-nav__item" data-filterG="2">Ingredient Name</li>
-                <li class="c-nav__list-item js-nav__random" data-filterG="3">Random Cocktail</li>
+                <li tabindex="0" class="c-nav__list-item js-nav__item c-nav__list-item--active" data-filterG="1">Cocktail Name</li>
+                <li tabindex="0" class="c-nav__list-item js-nav__item" data-filterG="2">Ingredient Name</li>
+                <li tabindex="0" class="c-nav__list-item js-nav__random" data-filterG="3">Random Cocktail</li>
             </ul>
         </div>
     </nav>
