position cocktail items with grid

--- a/index.html
+++ b/index.html
@@ -37,31 +37,14 @@
     </nav>
     <section class="o-container">
         <div class="o-grid js-cocktailList">
-            <div class="c-cocktail__item" tabindex="0">
-                <div class="cocktail__item-inner">
-                    <div class="c-cocktail__item-front">
-                        <div>
-                            <img class="c-cocktail__image" src="https://www.thecocktaildb.com/images/media/drink/qyyvtu1468878544.jpg" alt="" height="100%">
-                        </div>
-                        <div class="c-cocktail__name">
-                            Vodka
-                        </div>
-                        <div class="c-chart" style="--percentage: 30">3 <br> Ingredients</div>
-                        <div class="c-chart__label">
-                            <div>Easy</div>
-                            <div>Hard</div>
-                        </div>
-                    </div>
-                    <div class="c-cocktail__item-back">
-                        <h5>Cocktail Glass</h5>
-                        Test
-                        <h5>Ingrendient</h5>
-                        Test
-                        <h5>Instructions</h5>
-                        Test
-                    </div>
-                </div>
+            
+            <div></div>
+            <div>
+                <p>Geen cocktail met de naam</p>
             </div>
+
+
+
         </div>    
     </section>
 </body>
