error screens + empty screen

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <section class="o-container">
         <div class="o-grid js-cocktailList">
             
-            <div></div>
-            <div>
-                <p>Geen cocktail met de naam</p>
+            
+            <div class="c-noName">
+                <img class="c-noName__img" src="./img/searchCocktailByName.png" />
+                <h3>What are you searching for?</h3>
+                <p class="c-noName__text">Search your favorite coktail or find similar results.</p>
             </div>
-
-
 
         </div>    
     </section>
