--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="c-noName">
                 <img class="c-noName__img" src="./img/searchCocktailByName.png" />
                 <h3>What are you searching for?</h3>
-                <p class="c-noName__text">Search your favorite coktail or find similar results.</p>
+                <p class="c-noName__text">Search your favorite cocktail or find similar results.</p>
             </div>
 
         </div>    
